--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
+.hidden{
+    display: none;
+}
+
 .image-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
 }
-
-
 
 .shadow-box {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
